fixed some spacing issues

--- a/src/app/comp-rules-setup/comp-rules-setup.component.sass
+++ b/src/app/comp-rules-setup/comp-rules-setup.component.sass
@@ -23,6 +23,7 @@ table
 td
 	padding-bottom: $cell-bottom-padding
 	font-size: styles.$data-font-size
+	vertical-align: text-top
 
 th
 	text-align: left
