--- a/src/app/shared/components/tag-list/tag-list.component.sass
+++ b/src/app/shared/components/tag-list/tag-list.component.sass
@@ -2,6 +2,9 @@
 
 .tag-list
 	margin-top: .2em
+	display: inline-flex
+	flex-wrap: wrap
+	max-width: 90%
 
 .single-tag
 	background-color: styles.$bg-color-menu1
